--- a/web/services.html
+++ b/web/services.html
@@ -7,7 +7,14 @@
 </head>
 <body class="bg-gray-100 min-h-screen p-8">
     <div class="max-w-5xl mx-auto">
-        <h1 class="text-3xl font-bold mb-6">Services</h1>
+        <div class="flex justify-between items-center mb-3">
+            <h1 class="text-3xl font-bold">Services</h1>
+            <button id="openDialog" class="text-sm bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
+                New Service
+            </button>
+        </div>
+
+        <!-- Service Table -->
         <table class="min-w-full bg-white rounded-lg shadow-md">
             <thead class="bg-gray-200 text-gray-600 uppercase text-sm leading-normal">
                 <tr>
@@ -16,6 +23,7 @@
                     <th class="py-3 px-6 text-left">Description</th>
                     <th class="py-3 px-6 text-left">Port</th>
                     <th class="py-3 px-6 text-left">Status</th>
+                    <th class="py-3 text-left"></th>
                 </tr>
             </thead>
             <tbody class="text-gray-700 text-sm font-light">
@@ -25,13 +33,80 @@
                     <td class="py-3 px-6">{{.Name}}</td>
                     <td class="py-3 px-6">{{.Description}}</td>
                     <td class="py-3 px-6">{{.Port}}</td>
-                    <td class="py-3 px-6 "><span class="status-badge px-4 py-1 rounded-full">{{.Status}}</span></td>
+                    <td class="py-3 px-6"><span class="status-badge px-4 py-1 rounded-full">{{.Status}}</span></td>
+                    <td class="py-3 text-red-500 cursor-pointer hover:text-red-800" onclick="deleteService('{{.ID}}')">delete</td>
                 </tr>
                 {{end}}
             </tbody>
         </table>
     </div>
+
+    <!-- Modal Dialog -->
+    <div id="dialog" class="fixed inset-0 bg-black bg-opacity-40 hidden flex items-center justify-center">
+        <div class="bg-white rounded-lg p-6 w-full max-w-md shadow-lg">
+            <h2 class="text-xl font-semibold mb-4">New Service</h2>
+            <form id="serviceForm" class="space-y-4">
+                <div>
+                    <label class="block text-sm font-medium">Name</label>
+                    <input type="text" name="name" required class="w-full border border-gray-300 rounded px-3 py-2">
+                </div>
+                <div>
+                    <label class="block text-sm font-medium">Description</label>
+                    <input type="text" name="description" required class="w-full border border-gray-300 rounded px-3 py-2">
+                </div>
+                <div>
+                    <label class="block text-sm font-medium">Port</label>
+                    <input type="number" name="port" required class="w-full border border-gray-300 rounded px-3 py-2">
+                </div>
+                <div class="flex justify-end space-x-2 pt-4">
+                    <button type="button" id="cancelDialog" class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400">Cancel</button>
+                    <button type="submit" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
     <script>
+    async function deleteService(id) {
+        const res = await fetch("/service/" + id, {
+            method: "DELETE",
+        });
+
+        if (res.ok) {
+            location.reload();
+        } else {
+            alert("Failed to delete service");
+        }
+    }
+
+    const dialog = document.getElementById('dialog');
+    document.getElementById('openDialog').onclick = () => dialog.classList.remove('hidden');
+    document.getElementById('cancelDialog').onclick = () => dialog.classList.add('hidden');
+
+    document.getElementById('serviceForm').onsubmit = async (e) => {
+        e.preventDefault();
+        const form = e.target;
+        const data = {
+            name: form.name.value.trim(),
+            description: form.description.value.trim(),
+            port: form.port.value.trim(),
+        };
+
+        const response = await fetch('/service', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(data)
+        });
+
+        if (response.ok) {
+            location.reload();
+        } else {
+            alert('Failed to add service');
+        }
+    };
+
     document.querySelectorAll('.status-badge').forEach(el => {
         const status = el.textContent.trim().toLowerCase();
         switch (status) {
