--- a/web/auth.html
+++ b/web/auth.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Login</title>
 		<script src="https://unpkg.com/htmx.org@1.9.2"></script>
 		<script src="https://cdn.tailwindcss.com"></script>
